# colab-db.github.io

./: .gitignore  200.html  404.html  LICENSE  README.md  _payload.js  app.vue  dist  index.html  nuxt.config.ts  package-lock.json  package.json  routes.json  tailwind.config.js
.github/workflows/: build-page.yml  check-pullrequests.yml  update-data.yml
200/: index.html
_nuxt/: Comments.00aa0086.js  Comments.155d01f9.js  Comments.16ca40ca.js  Comments.1f8d13c9.js  Comments.2a7ab032.js  Comments.411e706a.js  Comments.4bd18482.js  Comments.5964c928.js  Comments.60a05fe9.js  Comments.69c8cc49.js  Comments.73a28a8a.js  Comments.771384ca.js  Comments.7fe94e88.js  Comments.8414dd18.js  Comments.87f18ec3.js  Comments.8920f257.js  Comments.8a1b421e.js  Comments.8f4688d6.js  Comments.a42e0b4e.js  Comments.b5d257df.js  Comments.bb927c23.js  Comments.c746c803.js  Comments.cbda98b1.js  Comments.cc328e77.js  Comments.dd847c63.js  Comments.e2d57525.js  Comments.e39fae6e.js  Comments.e5943848.js  Comments.f81345a5.js  ContentDoc-061beb86.mjs  ContentDoc-74ee73db.mjs  ContentDoc-9853ea31.mjs  ContentDoc-e20ff2d3.mjs  ContentDoc.07b83b22.js  ContentDoc.097c1d34.js  ContentDoc.1418c3d3.js  ContentDoc.339996ae.js  ContentDoc.37dd34c3.js  ContentDoc.3c9a3625.js  ContentDoc.3caa38c9.js  (+1936 more)
api/_content/: cache  cache.1671723179178.json  cache.1671724483195.json  cache.1671816672672.json  cache.1671816764521.json  cache.1671825969261.json  cache.1672047321412.json  cache.1674406627107.json  cache.1674492080883.json  cache.1674493002013.json  cache.1674493388254.json  cache.1674493559944.json  cache.1674494877778.json  cache.1674509927518.json  cache.1674511294230.json  cache.1674549038731.json  cache.1674569954019.json  cache.1674577341298.json  cache.1674655892827.json  cache.1674667230071.json  cache.1674667476452.json  cache.1674668166820.json  cache.1674668374244.json  (+32 more)
components/: Comments.vue  Filter.vue  FilterBar.vue  Foot.vue  Huggingface.vue  Modal.vue  Nav.vue  Notebook.vue  SelectType.vue
content/: metadata.json
pages/: index.vue  submit.vue
scripts/: README.md  requirements.txt  setup.cfg  tox.ini
scripts/src/colabdb-meta/: models.py  parse_frontmatter.py
scripts/src/colabdbmeta/: fetch_github.py  fetch_huggingface.py  models.py  parse_frontmatter.py  process_all.py
scripts/src/colabdbmeta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/tests/: conftest.py  test_fetch_github.py  test_fetch_huggingface.py  test_parse_frontmatter.py  test_process_all.py
scripts/tests/test_files/notebooks/: colab-test.md  colabfold.md  colabfold_advanced.md  dmasifcolab.md  hf-test.md  rdkit-etkdg.md
submit/: _payload.js  index.html
utils/: check-markdownfiles.py  checkNotebooks.py  indexNotebooks.py  validate.js
(+177 files in other folders)
