##########################
# Setup.py Configuration #
##########################
[metadata]
name = colabdbmeta
version = 0.0.1-dev
description =  
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/colab-db/colab-db.github.io
download_url = https://github.com/colab-db/colab-db.github.io/releases
project_urls =
    Bug Tracker = https://github.com/colab-db/colab-db.github.io/issues
    Source Code = https://github.com/colab-db/colab-db.github.io

# Author information
author = Simon Dürr, Kevin Jablonka
author_email = 
maintainer = Simon Dürr, Kevin Jablonka
maintainer_email = 

# License Information
license = MIT

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =

[options]
install_requires =
    pygithub 
    python-frontmatter
    pydantic
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    colabdbmeta = colabdbmeta.process_all:process_all_cli

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = colabdbmeta
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/colabdbmeta
    .tox/*/lib/python*/site-packages/colabdbmeta

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
